# igloo

./: .gitignore  Cargo.toml  DASHBOARD.md  FLOES.md  PLANNING.md  README.md  TODO.md  TODO.txt  example_config.ron  tokens.sqlite
crates/core/: .gitignore  Cargo.toml
crates/core/src/: core.rs
crates/core/src/auth/: mod.rs  model.rs  modify.rs
crates/core/src/ext/: TODO.txt  handle.rs
crates/core/src/history/: mod.rs
crates/core/src/query/: ctx.rs  mod.rs
crates/core/src/tree/: TODO.txt  model.rs
crates/interface/: Cargo.toml
crates/interface/src/: id.rs  lib.rs
crates/interface/src/query/: mod.rs  optimize.rs  snapshot.rs
crates/interface/src/types/: agg.rs  compound.rs  mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
crates/xtask/src/codegen/: mod.rs  parser.rs  utils.rs  wit.rs
dash/: Cargo.toml  example_0.igl  example_1.igl  example_2.igl  example_2_1.jsx  mark.txt  ron_test.ron  ron_test_2.ron
dash/core/: package.json  rsbuild.config.ts
dash/core/src/: App.tsx  ws.ts
dash/example_plugin/: package.json
dash/src/: grammar.lalrpop  lib.rs  test.rs
dash/src/lexer/: mod.rs  tokens.rs
dash/src/parser/: ast.rs  lexer.rs  mod.rs  test.rs  tokens.rs
dash/types/src/: components.ts  ids.ts  messages.ts  plugin.ts
esphome/: Cargo.toml  README.md  build.rs
esphome/src/: device.rs  floe.rs  main.rs  model.rs
esphome/src/connection/: base.rs  noise.rs  varu.rs
esphome/src/entity/: alarm_control_panel.rs  binary_sensor.rs  button.rs  camera.rs  climate.rs  cover.rs  date.rs  date_time.rs  event.rs  fan.rs  light.rs  lock.rs  media_player.rs  mod.rs  number.rs  select.rs  sensor.rs  siren.rs  switch.rs  text.rs  text_sensor.rs  time.rs  update.rs  valve.rs
frontend/: Cargo.toml  Dioxus.toml  README.md  index.html
frontend/assets/: bundle  components.css
frontend/assets/styling/: dash.css  header.css  main.css  sidebar.css  tree.css
frontend/core/: package.json  rsbuild.config.ts
frontend/core/src/: App.tsx  DashboardLoader.tsx  loadPlugin.ts
frontend/core/src/elements/: VStack.tsx
frontend/example_plugin/: package.json  rsbuild.config.ts
frontend/example_plugin/src/: DimmerSlider.tsx  Widget.tsx
frontend/penguin/: index.html
frontend/penguin/src/graph/: cmds.rs  select.rs
frontend/src/: dash.rs  header.rs  lib.rs  main.rs  mouse.rs  shared.rs  sidebar.rs  ws.rs
frontend/src/components/: header.rs
frontend/src/dash/: color.rs  layout.rs  mod.rs  slider.rs  switch.rs
frontend/src/editor/: mod.rs  model.rs
frontend/src/elements/: mod.rs
frontend/src/frontend/: app.rs
frontend/src/penguin/: coordinates.rs  mod.rs  node.rs  workspace.rs
frontend/src/penguin/model/: mod.rs  registry.rs  scene.rs
frontend/src/settings/: mod.rs
frontend/src/tree/: mod.rs
frontend/src/views/: mod.rs  penguin.rs  settings.rs
frontend/types/: package.json  tsconfig.json
frontend/types/src/: dashboard.ts  filters.ts  index.ts  queries.ts  values.ts
igd/: Cargo.toml  test.igd
igd/examples/: basic_dash.igd  error.igd  error_common.igd  fstring.igd  main.igd
igd/src/: error.rs  grammar.lalrpop  lib.rs  main.rs
igd/src/lexer/: fstring.rs  mod.rs  number.rs  string.rs  tokens.rs
igd/src/parser/: ast.rs  mod.rs  test.rs
interface/: Cargo.toml  README.md  build.rs  components.rs  components.toml  out.json  protocol.toml  standards.rs  types.rs
interface/benches/: codec_benchmark.rs
interface/src/: api.proto  avg.rs  codec.rs  components.rs  custom.rs  encoding.rs  entity.rs  floe.rs  helpers.rs  id.rs  lib.rs  model.rs  test.rs  tests.rs  tree.rs  types.rs
interface/src/components/: defs.rs  mod.rs  traits.rs
interface/src/floe/: codec.rs  mod.rs  varu.rs
interface/src/interface/: floe.rs  mod.rs  model.rs
interface/src/ipc/: codec.rs  mod.rs  model.rs  reader.rs  writer.rs
interface/src/penguin/: core.rs  graph.rs  mod.rs  registry.rs  standard.rs  types.rs
interface/src/penguin/defn/: mod.rs  node.rs  pin.rs
interface/src/query/: agg.rs  check.rs  display.rs  mod.rs  model.rs  optimize.rs  snapshot.rs  validator.rs
interface/src/query/model/: oneshot.rs  watch.rs
interface/src/server/: agg.rs  avg.rs  dash.rs  id.rs  mod.rs  query.rs  ws.rs
interface/src/types/: agg.rs  cast.rs  compare.rs  compound.rs  math.rs  mod.rs
interface/src/web/: dash.rs  mod.rs  ws.rs
penguin/: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  penguin.css
penguin/assets/: penguin.css  penguin.js
penguin/src/: app.rs  camera.rs  context.rs  ffi.rs  graph.rs  grid.rs  interaction.rs  lib.rs  main.rs  node.rs  state.rs  sys.rs  types.rs  viewport.rs
penguin/src/app/: event.rs  mod.rs
penguin/src/app/mode/: box_selecting.rs  dragging.rs  idle.rs  menu.rs  mod.rs  panning.rs  wiring.rs
penguin/src/comps/: context.rs  grid.rs  mod.rs  node.rs  node_input.rs  pin.rs  pin_input.rs  temp.rs  wire.rs
penguin/src/context/: mod.rs  search.rs
penguin/src/dom/: builder.rs  events.rs  js.js  js.rs  node.rs
penguin/src/graph/: clipboard.rs  cmds.rs  input.rs  mod.rs  node.rs  ops.rs  pin.rs  select.rs  wire.rs
penguin/src/graph/view/: input.rs  node.rs  pin.rs  wire.rs
penguin/src/menu/: mod.rs  search.rs
penguin/src/viewport/: grid.rs  mod.rs  toolbar.rs
server/: .gitignore  Cargo.toml  index.html
server/benches/: query_eval.rs
server/src/: core.rs  lib.rs  main.rs  test.rs
server/src/auth/: file.rs  modify.rs
server/src/dash/: mod.rs  model.rs  renderer.rs  watch.rs
server/src/ext/: TODO.txt  handle.rs  mod.rs
server/src/floe/: handle.rs  mod.rs
server/src/glacier/: entity.rs  file.rs  floe.rs  manager.rs  mod.rs  query.rs  state.rs  supervisor.rs  tree.rs
server/src/glacier/query/: collector.rs  exec.rs  filter.rs  iter.rs  mod.rs  model.rs  optimizer.rs
server/src/glacier/tree/: mod.rs  model.rs  mutation.rs  persist.rs  sim.rs
server/src/glacier_old/: entity.rs  floe.rs  mod.rs  query.rs
server/src/query/: mod.rs
server/src/tree/: arena.rs  mod.rs  model.rs  mutation.rs  persist.rs  sim.rs
server/src/web/: mod.rs  page.rs  test_dashes.rs  watch.rs
(+187 files in other folders)
