[package]
name = "igloo"
version = "0.1.0"
edition = "2024"

[dependencies]
esphomebridge-rs = { path = "../esphomebridge-rs/" }
axum = { version = "0.8.1", features = ["ws"] }
bitvec = "1.0.1"
clap = "4.5.31"
clap_derive = "4.5.28"
futures-util = "0.3.31"
reqwest = "0.12.12"
ron = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v7"] }
bcrypt = "0.17.0"
tower-http = { version = "0.6.2", features = ["fs"] }
tokio-rusqlite = "0.6.0"
rusqlite = "=0.32"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
# pyo3 = { version = "0.24.0", features = ["auto-initialize"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
jiff = { version = "0.2.10", features = ["serde"] }
shlex = "1.3.0"
rumqttc = "0.24.0"
rumqttd = "0.19.0"
config = "0.15.11"
