[package]
name = "igloo-dash"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
colored = "3.0.0"
either = "1.15.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
litrs = "0.5.1"
logos = "0.15.1"
rustc-literal-escaper = "0.0.5"

[build-dependencies]
lalrpop = { version = "0.22.2", features = ["lexer"] }
