[package]
name = "igloo-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = [
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Window",
] }
