[package]
name = "igloo-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = [
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Window",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "BinaryType",
  "console"
] }
rustc-hash = "2.1.1"
borsh = { version = "1.5.7", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
igloo-interface = { path = "../interface/", features = ["server"] }
maud = "0.27.0"


[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
