[package]
name = "igloo-frontend"
version = "0.1.0"
authors = ["LiamSnow <mail@liamsnow.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc.1", features = ["router"] }
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = [
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "MouseEvent",
  "Window",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "BinaryType",
  "console"
] }
borsh = { version = "1.5.7", features = ["derive"] }
igloo-interface = { path = "../interface/", features = ["server"] }
console_log = "1.0.0"
log = "0.4.28"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
