[package]
name = "igloo-interface"
version = "0.1.0"
edition = "2024"
build = "build/main.rs"

[features]
default = []
server = []
penguin = ["serde"]
floe = ["bytes", "tokio", "tokio-util"]

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
bytes = { version = "1.10.1", optional = true }
derive_more = { version = "2.0.1", features = ["add", "display", "from"] }
display-more = "0.2.1"
indexmap = "2.12.0"
serde = { version = "1.0.224", features = ["derive"], optional = true }
tokio = { version = "1.47.1", features = ["io-util", "net"], optional = true }
tokio-util = { version = "0.7.16", features = ["codec"], optional = true }

[build-dependencies]
toml = "0.9.7"
serde = { version = "1.0.224", features = ["derive"] }
quote = "1.0.40"
proc-macro2 = "1.0.101"
syn = { version = "2.0.106", features = ["full", "parsing"] }
prettyplease = "0.2.37"

[profile.release]
debug = true
panic = "abort"  
lto = true       
codegen-units = 1  
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
