[package]
name = "igloo-interface"
version = "0.1.0"
edition = "2024"
build = "build/main.rs"

[features]
default = []
penguin = []
ipc = ["bytes", "tokio", "tokio-util", "futures"]
kanal = ["dep:kanal"]

[dependencies]
bs58 = "0.5.1"
bytes = { version = "1.11.1", optional = true }
derive_more = { version = "2.1.1", features = ["display", "from"] }
display-more = "0.2.1"
futures = { version = "0.3.31", optional = true }
indexmap = "2.13.0"
kanal = { version = "0.1.1", optional = true }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["io-util", "net"], optional = true }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.18", features = ["codec"], optional = true }

[build-dependencies]
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
syn = { version = "2.0.114", features = ["full", "parsing"] }
prettyplease = "0.2.37"

[profile.release]
debug = true
panic = "abort"  
lto = true       
codegen-units = 1  
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
