[package]
name = "igloo-penguin"
version = "0.1.0"
authors = ["LiamSnow <mail@liamsnow.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
euclid = "0.22.11"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = [
  "Window",
  "Performance",
  "MouseEvent",
  "WheelEvent",
  "Element",
  "ClipboardEvent",
  "DataTransfer",
  "ResizeObserver",
  "KeyboardEvent",
  "InputEvent",
] }
igloo-interface = { path = "../interface/", features = ["penguin", "serde"] }
log = "0.4.28"
console_log = "1.0.0"
indexmap = "2.12.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
console_error_panic_hook = "0.1.7"
either = "1.15.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# strip = true
# panic = "abort"
