[package]
name = "igloo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
igloo-interface = { path = "../interface/", features = ["igloo-server"] }
axum = { version = "0.8.4", features = ["ws"] }
bcrypt = "0.17.1"
jiff = "0.2.15"
ron = "0.11.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
smallvec = { version = "1.15.1" }
bit-set = "0.8.0"
compact_string = "0.1.0"
rustc-hash = "2.1.1"
tokio-util = { version = "0.7.16", features = ["codec"] }
futures-util = { version = "0.3.31", features = ["sink"] }
borsh = { version = "1.5.7", features = ["derive"] }
rust-ini = "0.21.3"
tower-http = { version = "0.6.6", features = ["fs"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
maud = { version = "0.27.0", features = ["axum"] }
derive_more = { version = "2.0.1", features = ["display"] }


# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# strip = true
# panic = "abort"
