[package]
name = "igloo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
igloo-interface = { path = "../interface/", features = ["ipc", "penguin", "serde"] }
axum = { version = "0.8.4", features = ["ws"] }
bcrypt = "0.17.1"
jiff = "0.2.15"
ron = "0.11.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
smallvec = { version = "1.15.1" }
rustc-hash = "2.1.1"
tokio-util = { version = "0.7.16", features = ["codec"] }
futures-util = { version = "0.3.31", features = ["sink"] }
tower-http = { version = "0.6.6", features = ["fs"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
derive_more = { version = "2.0.1", features = ["from"] }
globset = "0.4.18"
rand = "0.9.2"
kanal = "0.1.1"
serde = "1.0.228"
serde_json = "1.0.149"
toml = "0.9.11"
itoa = "1.0.17"


[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
# strip = true
panic = "abort"

[profile.bench]
debug = true

[[bench]]
name = "query_eval"
harness = false
