[package]
name = "igloo-core"
version = "0.1.0"
edition = "2024"

[dependencies]
igloo-interface = { path = "../interface/", features = ["core", "async", "query", "penguin"] }
axum = { version = "0.8.8", features = ["ws"] }
bcrypt = "0.18.0"
jiff = "0.2.18"
ron = "0.12.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
smallvec = { version = "1.15.1" }
rustc-hash = "2.1.1"
tokio-util = { version = "0.7.18", features = ["codec"] }
tower-http = { version = "0.6.8", features = ["fs"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
derive_more = { version = "2.1.1", features = ["from"] }
globset = "0.4.18"
rand = "0.9.2"
kanal = "0.1.1"
serde = "1.0.228"
serde_json = "1.0.149"
toml = "0.9.11"
itoa = "1.0.17"
clap = { version = "4.5.57", features = ["derive", "env"] }
futures-util = { version = "0.3.31", features = ["sink"] }


[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# debug = true
# # strip = true
# panic = "abort"

# [profile.bench]
# debug = true

